# NPCAP_Linux

./: README.txt
common/mavlink-emulator/: README.md  emulator.py  sample_mission.json
common/test-data/: generate_mavlink_log.py  telemetry_sample.json
easy/01-python-mavlink-parser/: DroneMap.geojson  README.md  requirements.txt
easy/02-svelte-telemetry-display/: README.md  package-lock.json  package.json  types.ts
easy/03-python-log-analyzer/: README.md  flight_report.json
easy/04-rust-coordinate-converter/: Cargo.toml  README.md
easy/05-cpp-message-validator/: Makefile  README.md  test_validator  validator_demo
hard/01-rust-telemetry-service/: Cargo.toml  README.md
hard/01-rust-telemetry-service/src/: config.rs  error.rs  main.rs
hard/01-rust-telemetry-service/src/api/: mod.rs
hard/01-rust-telemetry-service/src/mavlink/: mod.rs  parser.rs  receiver.rs
hard/01-rust-telemetry-service/src/state/: mod.rs
hard/01-rust-telemetry-service/tests/: api_tests.rs
hard/02-svelte-mission-planner/: README.md  package.json
hard/03-python-sitl-integration/: README.md  requirements.txt
hard/04-cpp-custom-widget/: CMakeLists.txt  README.md
hard/05-fullstack-drone-dashboard/: README.md  docker-compose.yml
hard/05-fullstack-drone-dashboard/backend/: Cargo.toml
hard/05-fullstack-drone-dashboard/backend/src/: main.rs
hard/05-fullstack-drone-dashboard/backend/src/api/: mod.rs
hard/05-fullstack-drone-dashboard/backend/src/mavlink/: mod.rs
hard/05-fullstack-drone-dashboard/backend/src/state/: mod.rs
hard/05-fullstack-drone-dashboard/backend/tests/: api_tests.rs
medium/01-python-flight-simulator/: README.md  requirements.txt
medium/02-svelte-map-component/: README.md  (+1 more)
medium/04-cpp-parameter-editor/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
medium/04-cpp-parameter-editor/data/: schema.json
medium/04-cpp-parameter-editor/parameter-editor_autogen/: deps
medium/04-cpp-parameter-editor/parameter-editor_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
medium/04-cpp-parameter-editor/src/: Fmainwindow.cpp  Fmainwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  parameter.h  parameterdelegate.cpp  parameterdelegate.h  parametermodel.cpp  parametermodel.h  parameterschema.cpp
medium/04-cpp-parameter-editor/tests/: test_parameter.cpp
(+72 files in other folders)
